--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
 
         // Firebase
         classpath 'com.google.gms:google-services:4.3.3'
+        // Navigation
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
+
     }
 }
 
