--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,20 @@ dependencies {
     //Firebase Auth
     implementation 'com.google.firebase:firebase-auth:19.4.0'
 
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.firebaseui:firebase-ui-storage:3.2.2'
+
+    //Firebase Firestore
+    implementation 'com.google.firebase:firebase-firestore:21.6.0'
+    
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //Android Image Cropper
+    def android_cropper_version = "2.8.+"
+    api "com.theartofdev.edmodo:android-image-cropper:$android_cropper_version"
+
 }
