--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
         <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".ui.main.AddPetActivity"/>
+        <activity android:name=".ui.main.c_chat.ChatRoomActivity"/>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
